# simple-lake

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix
data/: event_options.csv  events.csv
data/procedural/: family_events.toml  party_events.toml  public_events.toml  variables.toml  work_events.toml
docs/plans/: 2025-12-20-procedural-event-generation-design.md
src/: app.rs  converter.rs  events.json  game_data.rs  lotus_widget.rs  main.rs
src/procedural/: generator.rs  library.rs  mod.rs  risk_calculator.rs  stat_calculator.rs  text_assembly.rs
